fixing the piography page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Home - Mon Andrei Obillo</title>
 </head>
 <body>
-    
+    <a href="Biography/biography.html">Go to Biography Page</a>
 </body>
 </html>
