added more basic structure

--- a/Biography/biography.html
+++ b/Biography/biography.html
@@ -2,17 +2,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/blog-style.css">
     <title>Still Developing - Obillo</title>
 </head>
 <body>
     <!---Obillo, Mon Andrei E | CSAD--->
     <!---December 18, 2025--->
     <h1><i>Still Developing</i></h1>
-    <h4>By Mon Andrei Obillo</h4>
+    <h4>A Biography by Mon Andrei Obillo</h4>
 
     <div class="table-of-contents">
         <h2>Table of Contents:</h2>
+        <ol type="A">
+            <li>Childhood</li>
+            <li>Teenage Years</li>
+            <li>College Years</li>
+        </ol>
     </div>
 
     <h2>Childhood</h2>
