fixed table of contents as well as other design aspects

--- a/Biography/biography.html
+++ b/Biography/biography.html
@@ -8,7 +8,7 @@
 <body>
     <!---Obillo, Mon Andrei E | CSAD--->
     <!---December 18, 2025--->
-    <h1><i>Still Developing</i></h1>
+    <h1>Still Developing</h1>
     <h4>A Biography by Mon Andrei Obillo</h4>
 
     <div class="table-of-contents">
