Reset my local repo and re-uploaded files

--- a/Biography/biography.html
+++ b/Biography/biography.html
@@ -39,45 +39,28 @@
         <h2 id="childhood">Childhood</h2>
         <div class="image-gallery">
             <figure class="image-gallery-item">
-                <img src="https://placehold.co/600x400" alt="">
-                <figcaption>Caption Goes Here</figcaption>
-                <figcaption class="source"><b>Source:</b> Source Here</figcaption>
+                <img src="../Images/Biography/Childhood-Nursery-Award.jpg" alt="Me at Nursery Receiving Awards">
+                <figcaption>Nursery Self receiving Awards</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="https://placehold.co/500x200" alt="">
-                <figcaption>Caption Goes Here</figcaption>
+                <img src="../Images/Biography/Childhood-Kinder-Valedictorian.jpg" alt="Me at Kinder Valedictorian">
+                <figcaption>When I Became Valedictorian in Kindergarten</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="https://placehold.co/700x300" alt="">
-                <figcaption>Caption Goes Here</figcaption>
+                <img src="../Images/Biography/Childhood-Candid-Smiling.jpg" alt="Elementary School Event">
+                <figcaption>During one of the school events in elementary</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="https://placehold.co/300x400" alt="">
-                <figcaption>Caption Goes Here</figcaption>
+                <img src="../Images/Biography/Childhood-Retreat-Candid-Pic.jpg" alt="At our Retreat">
+                <figcaption>Taken during our Grade 6 Retreat</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="https://placehold.co/400x400" alt="">
-                <figcaption>Caption Goes Here</figcaption>
+                <img src="../Images/Biography/Childhood-Field-Demo.jpg" alt="School Field Demo">
+                <figcaption>At one of the annual field demo performances</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="https://placehold.co/600x600" alt="">
-                <figcaption>Caption Goes Here</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img src="https://placehold.co/200x200" alt="">
-                <figcaption>Caption Goes Here</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img src="https://placehold.co/600x400" alt="">
-                <figcaption>Caption Goes Here</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img src="https://placehold.co/600x400" alt="">
-                <figcaption>Caption Goes Here</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img src="https://placehold.co/300x200" alt="">
-                <figcaption>Caption Goes Here</figcaption>
+                <img src="../Images/Biography/Childhood-Field-Trip-Arms-Out.jpeg" alt="Swimming Field Trip">
+                <figcaption>When we went swimming during a field trip</figcaption>
             </figure>
         </div>
         <p>My <em>childhood</em> story isn't one for the books.<sup>1</sup> There isn't much to tell about it.<sup>2</sup> For one, the most interesting part of my childhood would be that I graduated kinder as a <i>valedictorian</i>.<sup>3</sup> It was great, and I did a whole speech in front of so many people, but it wasn't as remarkable as people may think.<sup>4</sup> I was kinder, after all, and what I achieved then is incomparable with the achievements of other people in the levels that actually matter, such as right now in college.<sup>5</sup> I was just a quiet kid then.<sup>6</sup> I didn't have so many friends growing up, and those few friends I had are so distant now.<sup>7</sup> I didn't have that <q>iPad kid</q> era during my childhood, due to the fact that I didn't have access to gadgets early in life.<sup>8</sup> I had my first tablet at around 8 or 9, and even then I had restrictions, which did help to avoid the addiction towards gadgets that early in life.<sup>9</sup> I studied at a catholic school, which meant constant prayers before each class, and having to go through monthly masses and angelus every noon.<sup>10</sup> Back then, I wasn't allowed to have my own money, and had to bring lunch everyday to school, which made me jealous of my classmates who could buy at the canteen.<sup>11</sup> I did eventually get the freedom to buy using my own allowance, sometime around Grade 5 onwards.<sup>12</sup> I wasn't fond of pop culture, mainly due to not having access to the internet and not being exposed to current trends.<sup>13</sup> Until now I'm still not a fan of the latest... <i>everything</i>.<sup>14</sup> I remember vividly that I auditioned for the school church choir and when asked to sing anything I didn't know any popular songs so I had to sing a church song, which isn't bad considering I was auditioning for a church choir, but in that moment I felt a bit ashamed for not knowing what others could easily sing at that moment.<sup>15</sup> Looking back, it's easy to understand why I wasn't the most social as a kid.<sup>16</sup> I wasn't able to keep up with others, and that led to them not being fond of me.<sup>17</sup> It's mainly the reason why I was quiet and didn't have much of that <b><q>exciting</q></b> and <b><q>fun</q></b> childhood everyone brags of.<sup>18</sup> Even when I tried to open up, my words felt too small next to everyone else's stories.<sup>19</sup> Still, those quieter days taught me to observe and appreciate the little routines around me.<sup>20</sup> <br /><br /></p>
