--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/blog-style.css"> <!---For the sake of the nav-bar--->
+    <link rel="stylesheet" href="CSS/homepage-style.css"> <!---For the sake of the nav-bar--->
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/regular/style.css"/>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/fill/style.css"/>
     <title>Home - Mon Andrei Obillo</title>
@@ -21,8 +21,33 @@
             <a href="index.html">Home</a>
             <a href="Biography/biography.html">Biography</a>
             <a href="Blog%20Stories%20Pages/blog-story-homepage.html">Blog Story</a>
-            <a href="mailto:obillo.monandrei@ue.edu.ph" id="contact-me" target="_blank">Contact Me</a>
+            <a href="mailto:obillo.monandrei@ue.edu.ph" class="contact-me" target="_blank">Contact Me</a>
         </div>
     </nav>
+    <div class="space-buffer">
+    </div>
+    <div class="purple-section" id="start-page">
+        <div id="start-page-text">
+            <h2>I am</h2>
+            <br><h1>Mon Andrei</h1>
+            <br>
+            <p>A short paragraph description goes here</p>
+            <a href="mailto:obillo.monandrei@ue.edu.ph" class="contact-me">Contact Me</a>
+        </div>
+        <img src="Images/Homepage-Main-Image.png" alt="Homepage Image of Me">
+    </div>
+    <div class="cream-section coming-soon" id="about-me">
+        <h1>About me</h1>
+        <p>Soon to Open</p>
+        <img src="" alt="">
+    </div>
+    <div class="purple-section coming-soon" id="blogs">
+        <h1>Blogs</h1>
+        <p>Soon to Open</p>
+    </div>
+    <div class="cream-section coming-soon" id="talents-and-skills">
+        <h1>Talents & Skills</h1>
+        <p>Coming Soon</p>
+    </div>
 </body>
 </html>
