fixed screen height problem

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h2>I am</h2>
             <br><h1>Mon Andrei</h1>
             <br>
-            <p>A short paragraph description goes here</p>
+            <p>A Student, Singer, Programmer, and Writer, all in one. </p>
             <a href="mailto:obillo.monandrei@ue.edu.ph" class="contact-me">Contact Me</a>
         </div>
         <img src="Images/Homepage-Main-Image.png" alt="Homepage Image of Me">
