fixed homepage and started images

--- a/Biography/biography.html
+++ b/Biography/biography.html
@@ -43,12 +43,12 @@
                 <figcaption>Nursery Self receiving Awards</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/Childhood-Kinder-Valedictorian.jpg" alt="Me at Kinder Valedictorian">
-                <figcaption>When I Became Valedictorian in Kindergarten</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
                 <img src="../Images/Biography/Childhood-Candid-Smiling.jpg" alt="Elementary School Event">
                 <figcaption>During one of the school events in elementary</figcaption>
+            </figure>
+            <figure class="image-gallery-item">
+                <img src="../Images/Biography/Childhood-Kinder-Valedictorian.jpg" alt="Me at Kinder Valedictorian">
+                <figcaption>When I Became Valedictorian in Kindergarten</figcaption>
             </figure>
             <figure class="image-gallery-item">
                 <img src="../Images/Biography/Childhood-Retreat-Candid-Pic.jpg" alt="At our Retreat">
@@ -68,19 +68,19 @@
         <h2 id="teenage-years">Teenage Years</h2>
         <div class="image-gallery">
             <figure class="image-gallery-item">
-                <img src="https://placehold.co/600x400" alt="">
-                <figcaption>Caption Goes Here</figcaption>
+                <img src="../Images/Biography/Teenage-Online-Class-Setup.jpg" alt="My Online Class Setup">
+                <figcaption>My Online Class Setup</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="https://placehold.co/500x200" alt="">
-                <figcaption>Caption Goes Here</figcaption>
+                <img src="../Images/Biography/Teenage-Glasses.jpg" alt="Me with Glasses">
+                <figcaption>A Random Image of me with glasses</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="https://placehold.co/700x300" alt="">
-                <figcaption>Caption Goes Here</figcaption>
+                <img src="../Images/Biography/Teenage-Floating-Pillow.jpg" alt="For my online class project">
+                <figcaption>One of many online class activity submission</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="https://placehold.co/300x400" alt="">
+                <img src="../Images/Biography/Teenage" alt="">
                 <figcaption>Caption Goes Here</figcaption>
             </figure>
             <figure class="image-gallery-item">
