--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <i class="ph ph-list"></i> </label>
         <div class="nav-links">
             <a href="index.html">Home</a>
-            <a href="Biography/biography.html">Biography</a>
-            <a href="Blog%20Stories%20Pages/blog-story-homepage.html">Blog Story</a>
+            <a href="Biography/biography.html">About Me</a>
+            <a href="#blogs">Blog Stories</a>
             <a href="mailto:obillo.monandrei@ue.edu.ph" class="contact-me" target="_blank">Contact Me</a>
         </div>
     </nav>
@@ -31,19 +31,47 @@
             <h2>I am</h2>
             <br><h1>Mon Andrei</h1>
             <br>
-            <p>A Student, Singer, Programmer, and Writer, all in one. </p>
+            <p>A Student, Singer, Programmer, and Writer, all in one, pursuing BS Computer Science and singing with the University Chorale.</p>
             <a href="mailto:obillo.monandrei@ue.edu.ph" class="contact-me">Contact Me</a>
         </div>
         <img src="Images/Homepage-Main-Image.png" alt="Homepage Image of Me">
     </div>
-    <div class="cream-section coming-soon" id="about-me">
-        <h1>About me</h1>
-        <p>Soon to Open</p>
+    <div class="cream-section" id="about-me">
+        <div class="section-text">
+            <h1>About Me</h1>
+            <p>I am <i>19 Years Old</i>, studying BS Computer Science at the University of the East - Manila. I am a DOST Scholar and a Singer of the UE Chorale.</p>
+            <br>
+            <a href="Biography/biography.html">Read My Biography</a>
+        </div>
         <img src="" alt="">
     </div>
-    <div class="purple-section coming-soon" id="blogs">
-        <h1>Blogs</h1>
-        <p>Soon to Open</p>
+    <div class="purple-section" id="blogs">
+        <div class="section-text">
+            <h1>Blog Stories</h1>
+        </div>
+        <div class="blog-snippets">
+            <a href="/Blog%20Stories%20Pages/tech.html" class="blog-snippet-card">
+                <img src="https://images.unsplash.com/photo-1547394765-185e1e68f34e?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Closeup photo of Keyboard">
+                <div class="blog-snippet-text">
+                    <h2>Why I HATE My Laptop</h2>
+                    <p>I <i>HATE</i> my laptop. It’s so fragile and barely does the job...<em class="read-more">Read More</em></p>
+                </div>
+            </a>
+            <a href="/Blog%20Stories%20Pages/personal.html" class="blog-snippet-card">
+                <img src="https://playhive.com/content/images/size/w600/2023/10/2023-10-17-16-44-09.jpg" alt="Minecraft The HIve Screenshot">
+                <div class="blog-snippet-text">
+                    <h2>I Can't Let Go of Minecraft</h2>
+                    <p>Call me childish, but I'm still an avid minecraft player. I still fi...<em class="read-more">Read More</em></p>
+                </div>
+            </a>
+            <a href="/Blog%20Stories%20Pages/career.html" class="blog-snippet-card">
+                <img src="https://images.unsplash.com/photo-1529400971008-f566de0e6dfc?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Man with briefcase">
+                <div class="blog-snippet-text">
+                    <h2>Is it my fault?</h2>
+                    <p>To be honest, I don't know if I'll even make it to my future. It's so unclear and hard to forsee. As much as I...<em class="read-more">Read More</em></p>
+                </div>
+            </a>
+        </div>
     </div>
     <div class="cream-section coming-soon" id="talents-and-skills">
         <h1>Talents & Skills</h1>
