--- a/Biography/biography.html
+++ b/Biography/biography.html
@@ -72,40 +72,12 @@
                 <figcaption>My Online Class Setup</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/Teenage-Glasses.jpg" alt="Me with Glasses">
-                <figcaption>A Random Image of me with glasses</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
                 <img src="../Images/Biography/Teenage-Floating-Pillow.jpg" alt="For my online class project">
                 <figcaption>One of many online class activity submission</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/Teenage" alt="">
-                <figcaption>Caption Goes Here</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img src="https://placehold.co/400x400" alt="">
-                <figcaption>Caption Goes Here</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img src="https://placehold.co/600x600" alt="">
-                <figcaption>Caption Goes Here</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img src="https://placehold.co/200x200" alt="">
-                <figcaption>Caption Goes Here</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img src="https://placehold.co/600x400" alt="">
-                <figcaption>Caption Goes Here</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img src="https://placehold.co/600x400" alt="">
-                <figcaption>Caption Goes Here</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img src="https://placehold.co/300x200" alt="">
-                <figcaption>Caption Goes Here</figcaption>
+                <img src="../Images/Biography/Teenage-Pearl-Smiling.jpg" alt="My Submission for a project">
+                <figcaption>My Submission for a subject project</figcaption>
             </figure>
         </div>
         <p>Half of my <em>teenage</em> years were spent locked up in my own home, as the pandemic forced the world to shut down.<sup>1</sup> A lot changed during that time, and as time progressed, I became somehow unrecognizable compared to before the pandemic.<sup>2</sup> Not in a physical sense, although with puberty happening during that time, I was changing and growing out of my younger self.<sup>3</sup> Before the pandemic, I was so outdated with almost everything, and all of a sudden, the need to be chronically online due to school opened me up to more of the world than I knew before.<sup>4</sup> Before I knew it… <i>I still wasn't fond of the latest trends</i>.<sup>5</sup> Instead, I found a liking to a lot of fiction, whether it was books or movies, I had so much time on my hands to consume fictional materials.<sup>6</sup> I found a liking to writing fictional stories as well, drastically improving my vocabulary and capability to words.<sup>7</sup> It may not be as obvious now since its been years since I last wrote.<sup>8</sup> I also took a liking with designing and doing creative digital designs, mainly to support my writing journey by making cover art for my works, which I published on a platform called "Wattpad", but evolved to making general designs, mainly for school purposes.<sup>9</sup> Due to being chronically online, I became a bit obnoxious with chats and messages online.<sup>10</sup> Those few friends I had were quite surprised when I became noisy online, messaging more than 5 messages for just one meaning.<sup>11</sup> I could be asking them about an assignment, but instead of sending one message containing all my thoughts, it would be dispersed into more than 7 messages.<sup>12</sup> It did cause some people to be irritated and slowly drift away from me.<sup>13</sup> I guess it was mostly due to the isolation, and that despite my almost "antisocial" behavior in the past, I still craved interactions with others.<sup>14</sup> That and the fact that I never learned proper communication and socialization skills growing up.<sup>15</sup> My mental health wasn't the best, and by the time the pandemic was over, I couldn't transition easily.<sup>16</sup> Being stuck at home for years with no way of going out and interacting with others caused a severe impact on me.<sup>17</sup> It took months to finally adjust to the new normal.<sup>18</sup> Being under lockdown practically my whole teenage life meant the changes and the new unlocked knowledge and hobbies weren't honed in the outside world and to the social world.<sup>19</sup> I developed and grew without the factors like going out with friends and developing my first relationships <i>(if I was ever lucky)</i>, and so after the pandemic was a whole other development stage.<sup>20</sup> A lot of the things I should've learned and developed in me happened too late in my adolescent years, and even as a new adult I'm still developing.<sup>21</sup> <br /><br /></p>
@@ -113,44 +85,24 @@
         <h2 id="college-years">College Years</h2>
         <div class="image-gallery">
             <figure class="image-gallery-item">
-                <img src="https://placehold.co/600x400" alt="">
-                <figcaption>Caption Goes Here</figcaption>
+                <img src="../Images/Biography/College-Singing-Contest-Award.JPG" alt="Singing Contest Award">
+                <figcaption>Back when I won Runner Up in a singing contest</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="https://placehold.co/500x200" alt="">
-                <figcaption>Caption Goes Here</figcaption>
+                <img src="../Images/Biography/College-Tarlac-1-Award.jpg" alt="At the First Time Competiting with UEC">
+                <figcaption>Me holding our awards for our first competition after the pandemic (2024)</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="https://placehold.co/700x300" alt="">
-                <figcaption>Caption Goes Here</figcaption>
+                <img src="../Images/Biography/College-SHS-Graduation-Pic.jpg" alt="My SHS Graduation Picture">
+                <figcaption>BTS of My SHS Graduation Picture</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="https://placehold.co/300x400" alt="">
-                <figcaption>Caption Goes Here</figcaption>
+                <img src="../Images/Biography/College-Freshmen-Friend-Group.jpeg" alt="My Friend Group during Freshmen Year">
+                <figcaption>My Friend Group back in Freshmen Year (Until Now)</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="https://placehold.co/400x400" alt="">
-                <figcaption>Caption Goes Here</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img src="https://placehold.co/600x600" alt="">
-                <figcaption>Caption Goes Here</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img src="https://placehold.co/200x200" alt="">
-                <figcaption>Caption Goes Here</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img src="https://placehold.co/600x400" alt="">
-                <figcaption>Caption Goes Here</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img src="https://placehold.co/600x400" alt="">
-                <figcaption>Caption Goes Here</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img src="https://placehold.co/300x200" alt="">
-                <figcaption>Caption Goes Here</figcaption>
+                <img src="../Images/Biography/College-My-UE-Snapshot-At-Night.jpg" alt="UE at Night">
+                <figcaption>UE at Night (taken by me)</figcaption>
             </figure>
         </div>
         <p>Now, in <em>college</em> came a lot of new experiences.<sup>1</sup> I consider my senior high school a part of my journey in this phase because it happened after the pandemic and after I adjusted to the new normal.<sup>2</sup> Interestingly, I was able to travel a lot more after the pandemic, with my family going to boracay once and even the small travels for school projects and such.<sup>3</sup> There was a hint of anxiety trying new things, like riding the jeepney, which was uncommon for me because as a kid I didn't have to go alone, and as a teen I was mostly home.<sup>4</sup> The first time I went home at night was during my senior high school as well, with 7:30PM class dismissals and the eventual 9PM schedule due to my commitment to <abbr title="University of the East Chorale">UE Chorale</abbr>, which until now I still am a part of.<sup>5</sup> It was during this time that I had my first real group of friends, who may have been a bit too influential to me, having me try new things <i>(I regret, like trying alcohol when I turned 18)</i>.<sup>6</sup> It wasn't the best, but I learned so much from just those two years of senior high school.<sup>7</sup> College is a different story.<sup>8</sup> The experience was so different from senior high, as my blockmates and friends from the class were more mature and reserved.<sup>9</sup> I barely see any drama that was so common during the senior high phase.<sup>10</sup> It was at this time that I felt like I had full control over my own life, with the course that I love and the scholarships to keep me going (DOST and from <abbr title="University of the East Chorale">UE Chorale</abbr>).<sup>11</sup> I felt that life was more real, and that things will keep on becoming more “real”, as some choices do lead to so much more.<sup>12</sup> I found love during this time, and with just a simple interaction, we became more than I ever dreamed of in a partner.<sup>13</sup> I wasn't exactly waiting or trying to find someone, rather it just happened.<sup>14</sup> And even after a year and counting, we're still together and still staying strong.<sup>15</sup> It was a decision that showed me that life is “real” and the things I choose change the course of my life, sometimes for the better, as with my partner.<sup>16</sup> My world grew from just myself to an ever-expanding possibility, and it pushed me to be more than what I used to be.<sup>17</sup> I may not have had a <b>“fun”</b> childhood or that <b>“YOLO”</b> teenage years but I certainly crossed a lot of things in the <u>College Journey Checklist</u> everyone claims to be “canon college events” that everyone seems to get.<sup>18</sup> I'm able to find better and more sustainable friendships, get a healthy relationship, and have a stable journey towards the next parts of my life with the career I love.<sup>19</sup> It may not have been the best past, but one thing I learned from all of this is that I can change the future and make it better.<sup>20</sup></p>
