--- a/Blog Stories Pages/tech.html
+++ b/Blog Stories Pages/tech.html
@@ -35,6 +35,11 @@
             <h3 class="minortag">Specs</h3>
             <h3 class="minortag">Student</h3>
         </div>
+        <figure class="image-gallery-item">
+            <img src="https://images.unsplash.com/photo-1547394765-185e1e68f34e?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Closeup image of keyboard">
+            <figcaption>A Closeup image of keyboard</figcaption>
+
+        </figure>
         <p> I <i>HATE</i> my laptop. It’s so fragile and barely does the job for me and my work. Yet, despite my dislike of my device, I still couldn’t replace it.</p>
         <h2>In the past...</h2>
         <p>I’ve had this laptop since senior high school. Back then, during the height of the pandemic, it served its purpose by being my main device for online classes and school activities. These tasks were manageable for an <i>Intel Core i3</i> laptop with <i>8GB of RAM</i> and no dedicated graphics card. I got through senior high school without any serious performance issues.
