fixed nav bar links and labels

--- a/Biography/biography.html
+++ b/Biography/biography.html
@@ -17,9 +17,9 @@
         <label for="menu-toggle" class="menu-symbol">
             <i class="ph ph-list"></i> </label>
         <div class="nav-links">
-            <a href="../index.html">Home</a>
-            <a href="biography.html">Biography</a>
-            <a href="../Blog%20Stories%20Pages/blog-story-homepage.html">Blog Story</a>
+            <a href="../index.html#">Home</a>
+            <a href="biography.html">About Me</a>
+            <a href="../index.html#blogs">Blogs</a>
             <a href="mailto:obillo.monandrei@ue.edu.ph" id="contact-me" target="_blank">Contact Me</a>
         </div>
     </nav>
