hehe another nav bar fix

--- a/Blog Stories Pages/personal.html
+++ b/Blog Stories Pages/personal.html
@@ -20,8 +20,8 @@
             <i class="ph ph-list"></i> </label>
         <div class="nav-links">
             <a href="../index.html">Home</a>
-            <a href="../Biography/biography.html">Biography</a>
-            <a href="blog-story-homepage.html">Blog Story</a>
+            <a href="../Biography/biography.html">About Me</a>
+            <a href="../index.html#blogs">Blog Story</a>
             <a href="mailto:obillo.monandrei@ue.edu.ph" id="contact-me" target="_blank">Contact Me</a>
         </div>
     </nav>
