--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
             <h1>Blog Stories</h1>
         </div>
         <div class="blog-snippets">
-            <a href="/Blog%20Stories%20Pages/tech.html" class="blog-snippet-card">
+            <a href="Blog%20Stories%20Pages/tech.html" class="blog-snippet-card">
                 <img src="https://images.unsplash.com/photo-1547394765-185e1e68f34e?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Closeup photo of Keyboard">
                 <div class="blog-snippet-text">
                     <h2>Why I HATE My Laptop</h2>
                     <p>I <i>HATE</i> my laptop. It’s so fragile and barely does the job...<em class="read-more">Read More</em></p>
                 </div>
             </a>
-            <a href="/Blog%20Stories%20Pages/personal.html" class="blog-snippet-card">
+            <a href="Blog%20Stories%20Pages/personal.html" class="blog-snippet-card">
                 <img src="https://playhive.com/content/images/size/w600/2023/10/2023-10-17-16-44-09.jpg" alt="Minecraft The HIve Screenshot">
                 <div class="blog-snippet-text">
                     <h2>I Can't Let Go of Minecraft</h2>
                     <p>Call me childish, but I'm still an avid minecraft player. I still fi...<em class="read-more">Read More</em></p>
                 </div>
             </a>
-            <a href="/Blog%20Stories%20Pages/career.html" class="blog-snippet-card">
+            <a href="Blog%20Stories%20Pages/career.html" class="blog-snippet-card">
                 <img src="https://images.unsplash.com/photo-1529400971008-f566de0e6dfc?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Man with briefcase">
                 <div class="blog-snippet-text">
                     <h2>Is it my fault?</h2>
