--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="index.html">Home</a>
             <a href="Biography/biography.html">About Me</a>
             <a href="#blogs">Blog Stories</a>
-            <a href="mailto:obillo.monandrei@ue.edu.ph" class="contact-me" target="_blank">Contact Me</a>
+            <a href="#contact-info" class="contact-me" target="_blank">Contact Me</a>
         </div>
     </nav>
     <div class="space-buffer">
@@ -32,7 +32,7 @@
             <br><h1>Mon Andrei</h1>
             <br>
             <p>A Student, Singer, Programmer, and Writer, all in one, pursuing BS Computer Science and singing with the University Chorale.</p>
-            <a href="mailto:obillo.monandrei@ue.edu.ph" class="contact-me">Contact Me</a>
+            <a href="#contact-info" class="contact-me">Contact Me</a>
         </div>
         <img src="Images/Homepage-Main-Image.png" alt="Homepage Image of Me">
     </div>
@@ -77,5 +77,13 @@
         <h1>Talents & Skills</h1>
         <p>Coming Soon</p>
     </div>
+    <footer id="contact-info">
+        <p>Contact Information:</p>
+        <div style="display:flex; flex-wrap:wrap; gap:20px">
+            <a href="mailto:obillomonandrei@ue.edu.ph">Email</a>
+            <a href="https://www.facebook.com/Mon.Andrei.Obillo">Facebook</a>
+        </div>
+    </footer>
+    <a href="#" class="back-to-top" id="back-to-top">Back to Top &#8593;</a>
 </body>
 </html>
