fix contact me bug

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <label for="menu-toggle" class="menu-symbol">
             <i class="ph ph-list"></i> </label>
         <div class="nav-links">
-            <a href="index.html">Home</a>
+            <a href="#">Home</a>
             <a href="Biography/biography.html">About Me</a>
             <a href="#blogs">Blog Stories</a>
             <a href="#contact-info" class="contact-me" target="_blank">Contact Me</a>
