nav contact fix

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#">Home</a>
             <a href="Biography/biography.html">About Me</a>
             <a href="#blogs">Blog Stories</a>
-            <a href="#contact-info" class="contact-me" target="_blank">Contact Me</a>
+            <a href="#contact-info" class="contact-me" target="_blank" id="nav-contact">Contact Me</a>
         </div>
     </nav>
     <div class="space-buffer">
