started gallery page and added more fixes to contact

--- a/Blog Stories Pages/personal.html
+++ b/Blog Stories Pages/personal.html
@@ -21,7 +21,7 @@
         <div class="nav-links">
             <a href="../index.html">Home</a>
             <a href="../Biography/biography.html">About Me</a>
-            <a href="../index.html#blogs">Blog Story</a>
+            <a href="../index.html#blogs">Blogs</a>
             <a href="mailto:obillo.monandrei@ue.edu.ph" id="contact-me" target="_blank">Contact Me</a>
         </div>
     </nav>
