--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <label for="menu-toggle" class="menu-symbol">
             <i class="ph ph-list"></i> </label>
         <div class="nav-links">
-            <a href="#">Home</a>
             <a href="Biography/biography.html">About Me</a>
-            <a href="#blogs">Blog Stories</a>
-            <a href="#contact-info" class="contact-me" target="_blank" id="nav-contact">Contact Me</a>
+            <a href="#blogs">Blogs</a>
+            <a href="Images/gallery.html">Photos</a>
+            <a href="#contact-info" class="contact-me" target="_blank">Contact Me</a>
         </div>
     </nav>
     <div class="space-buffer">
