--- a/Images/gallery.html
+++ b/Images/gallery.html
@@ -5,7 +5,6 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="../CSS/gallery.css">
-    <script src="../JS/gallery-behavior.js" defer></script>
     <title>Photo Dump</title>
 </head>
 <body>
@@ -29,35 +28,35 @@
         <h2>Just Me</h2>
         <div class="image-gallery">
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/Childhood-Candid-Smiling.jpg" alt="Elementary School Event">
+                <img target="Image Up Close" src="../Images/Biography/Childhood-Candid-Smiling.jpg" alt="Elementary School Event">
                 <figcaption>During one of the school events in elementary</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/Childhood-Field-Demo.jpg" alt="School Field Demo">
+                <img target="Image Up Close" src="../Images/Biography/Childhood-Field-Demo.jpg" alt="School Field Demo">
                 <figcaption>At one of the annual field demo performances</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/Teenage-Online-Class-Setup.jpg" alt="My Online Class Setup">
+                <img target="Image Up Close" src="../Images/Biography/Teenage-Online-Class-Setup.jpg" alt="My Online Class Setup">
                 <figcaption>My Online Class Setup</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/Teenage-Floating-Pillow.jpg" alt="For my online class project">
+                <img target="Image Up Close" src="../Images/Biography/Teenage-Floating-Pillow.jpg" alt="For my online class project">
                 <figcaption>One of many online class activity submission</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/Teenage-Pearl-Smiling.jpg" alt="My Submission for a project">
+                <img target="Image Up Close" src="../Images/Biography/Teenage-Pearl-Smiling.jpg" alt="My Submission for a project">
                 <figcaption>My Submission for a subject project</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/College-Singing-Contest-Award.JPG" alt="Singing Contest Award">
+                <img target="Image Up Close" src="../Images/Biography/College-Singing-Contest-Award.JPG" alt="Singing Contest Award">
                 <figcaption>Back when I won Runner Up in a singing contest</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/College-Tarlac-1-Award.jpg" alt="At the First Time Competiting with UEC">
+                <img target="Image Up Close" src="../Images/Biography/College-Tarlac-1-Award.jpg" alt="At the First Time Competiting with UEC">
                 <figcaption>Me holding our awards for our first competition after the pandemic (2024)</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/College-SHS-Graduation-Pic.jpg" alt="My SHS Graduation Picture">
+                <img target="Image Up Close" src="../Images/Biography/College-SHS-Graduation-Pic.jpg" alt="My SHS Graduation Picture">
                 <figcaption>BTS of My SHS Graduation Picture</figcaption>
             </figure>
 
@@ -65,46 +64,70 @@
         <h2>Family and Friends</h2>
         <div class="image-gallery">
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/College-Freshmen-Friend-Group.jpeg" alt="My Friend Group during Freshmen Year">
+                <img target="Image Up Close" src="../Images/Biography/College-Freshmen-Friend-Group.jpeg" alt="My Friend Group during Freshmen Year">
                 <figcaption>My Friend Group back in Freshmen Year (Until Now)</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/Childhood-Field-Trip-Arms-Out.jpeg" alt="Swimming Field Trip">
+                <img target="Image Up Close" src="../Images/Biography/Childhood-Field-Trip-Arms-Out.jpeg" alt="Swimming Field Trip">
                 <figcaption>When we went swimming during a field trip</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/Childhood-Nursery-Award.jpg" alt="Me at Nursery Receiving Awards">
+                <img target="Image Up Close" src="../Images/Biography/Childhood-Nursery-Award.jpg" alt="Me at Nursery Receiving Awards">
                 <figcaption>Nursery Self receiving Awards</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/Childhood-Kinder-Valedictorian.jpg" alt="Me at Kinder Valedictorian">
+                <img target="Image Up Close" src="../Images/Biography/Childhood-Kinder-Valedictorian.jpg" alt="Me at Kinder Valedictorian">
                 <figcaption>When I Became Valedictorian in Kindergarten</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/Childhood-Retreat-Candid-Pic.jpg" alt="At our Retreat">
+                <img target="Image Up Close" src="../Images/Biography/Childhood-Retreat-Candid-Pic.jpg" alt="At our Retreat">
                 <figcaption>Taken during our Grade 6 Retreat</figcaption>
             </figure>
         </div>
         <h2>Photography Dump</h2>
         <div class="image-gallery">
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/College-My-UE-Snapshot-At-Night.jpg" alt="UE at Night">
+                <img target="Image Up Close" src="../Images/Biography/College-My-UE-Snapshot-At-Night.jpg" alt="UE at Night">
                 <figcaption>UE at Night (taken by me)</figcaption>
             </figure>
-            <figure class="image-gallery-item"><img src="../Images/Biography/Photo-Bacc-Mass.jpg" alt="Baccalaureate Mass">
+            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Biography/Photo-Bacc-Mass.jpg" alt="Baccalaureate Mass">
                 <figcaption>Taken during my SHS Baccalaureate Mass</figcaption>
             </figure>
-            <figure class="image-gallery-item"><img src="../Images/Biography/Photo-Yowell-Closeup.jpg" alt="Frozen Yogurt">
+            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Biography/Photo-Yowell-Closeup.jpg" alt="Frozen Yogurt">
                 <figcaption>A Closeup of Froyo</figcaption>
             </figure>
-            <figure class="image-gallery-item"><img src="" alt="">
-                <figcaption></figcaption>
+            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Biography/Photo-Cityscape.jpg" alt="Cityscape Near UE">
+                <figcaption>Taken from UE LB Building</figcaption>
             </figure>
-            <figure class="image-gallery-item"><img src="" alt="">
-                <figcaption></figcaption>
+            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Biography/Photo-Senate.jpg" alt="At The Senate">
+                <figcaption>Back when we performed in the senate.</figcaption>
             </figure>
-            <figure class="image-gallery-item"><img src="" alt="">
-                <figcaption></figcaption>
+            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Biography/Photo-Taken-at-a-Rizal-Resort.jpg" alt="Resort in Rizal">
+                <figcaption>In a resort in Rizal</figcaption>
+            </figure>
+            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Biography/Photo-UE-cal.jpg" alt="UE Caloocan Campus">
+                <figcaption>At the UE Caloocan Campus</figcaption>
+            </figure>
+        </div>
+        <h2>Random</h2>
+        <div class="image-gallery">
+            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Biography/Teenage-Back-Image.jpg" alt="Teenage back image">
+                <figcaption>Teenage back image</figcaption>
+            </figure>
+            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Biography/College-Singing-Contest-SInging.JPG" alt="College singing contest">
+                <figcaption>College singing contest</figcaption>
+            </figure>
+            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Personal-Blog/Personal-Menu-Screen-Old.png" alt="Old Minecraft Menu Screen">
+                <figcaption>Old Minecraft Menu Screen</figcaption>
+            </figure>
+            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Personal-Blog/Personal-Old-Nether-ss.png" alt="Old Nether Screenshot">
+                <figcaption>Back when the Nether looked like this</figcaption>
+            </figure>
+            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Personal-Blog/Personal-MON-Build-ss.png" alt="My name spelled with diamonds">
+                <figcaption>My name spelled with diamonds</figcaption>
+            </figure>
+            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Homepage-Main-Image.png" alt="Homepage Main Image">
+                <figcaption>The page homepage</figcaption>
             </figure>
         </div>
     </div>
