fixed image link problem

--- a/Images/gallery.html
+++ b/Images/gallery.html
@@ -27,108 +27,160 @@
         <h1>Photo Dump</h1>
         <h2>Just Me</h2>
         <div class="image-gallery">
-            <figure class="image-gallery-item">
-                <img target="Image Up Close" src="../Images/Biography/Childhood-Candid-Smiling.jpg" alt="Elementary School Event">
-                <figcaption>During one of the school events in elementary</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img target="Image Up Close" src="../Images/Biography/Childhood-Field-Demo.jpg" alt="School Field Demo">
-                <figcaption>At one of the annual field demo performances</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img target="Image Up Close" src="../Images/Biography/Teenage-Online-Class-Setup.jpg" alt="My Online Class Setup">
-                <figcaption>My Online Class Setup</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img target="Image Up Close" src="../Images/Biography/Teenage-Floating-Pillow.jpg" alt="For my online class project">
-                <figcaption>One of many online class activity submission</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img target="Image Up Close" src="../Images/Biography/Teenage-Pearl-Smiling.jpg" alt="My Submission for a project">
-                <figcaption>My Submission for a subject project</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img target="Image Up Close" src="../Images/Biography/College-Singing-Contest-Award.JPG" alt="Singing Contest Award">
-                <figcaption>Back when I won Runner Up in a singing contest</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img target="Image Up Close" src="../Images/Biography/College-Tarlac-1-Award.jpg" alt="At the First Time Competiting with UEC">
-                <figcaption>Me holding our awards for our first competition after the pandemic (2024)</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img target="Image Up Close" src="../Images/Biography/College-SHS-Graduation-Pic.jpg" alt="My SHS Graduation Picture">
-                <figcaption>BTS of My SHS Graduation Picture</figcaption>
-            </figure>
+            <a target="Image Up Close" href="../Images/Biography/Childhood-Candid-Smiling.jpg">
+                <figure class="image-gallery-item">
+                    <img src="../Images/Biography/Childhood-Candid-Smiling.jpg" alt="Elementary School Event">
+                    <figcaption>During one of the school events in elementary</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Biography/Childhood-Field-Demo.jpg">
+                <figure class="image-gallery-item">
+                    <img src="../Images/Biography/Childhood-Field-Demo.jpg" alt="School Field Demo">
+                    <figcaption>At one of the annual field demo performances</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Biography/Teenage-Online-Class-Setup.jpg">
+                <figure class="image-gallery-item">
+                    <img src="../Images/Biography/Teenage-Online-Class-Setup.jpg" alt="My Online Class Setup">
+                    <figcaption>My Online Class Setup</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Biography/Teenage-Floating-Pillow.jpg">
+                <figure class="image-gallery-item">
+                    <img src="../Images/Biography/Teenage-Floating-Pillow.jpg" alt="For my online class project">
+                    <figcaption>One of many online class activity submission</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Biography/Teenage-Pearl-Smiling.jpg">
+                <figure class="image-gallery-item">
+                    <img src="../Images/Biography/Teenage-Pearl-Smiling.jpg" alt="My Submission for a project">
+                    <figcaption>My Submission for a subject project</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Biography/College-Singing-Contest-Award.JPG">
+                <figure class="image-gallery-item">
+                    <img src="../Images/Biography/College-Singing-Contest-Award.JPG" alt="Singing Contest Award">
+                    <figcaption>Back when I won Runner Up in a singing contest</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Biography/College-Tarlac-1-Award.jpg">
+                <figure class="image-gallery-item">
+                    <img src="../Images/Biography/College-Tarlac-1-Award.jpg" alt="At the First Time Competiting with UEC">
+                    <figcaption>Me holding our awards for our first competition after the pandemic (2024)</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Biography/College-SHS-Graduation-Pic.jpg">
+                <figure class="image-gallery-item">
+                    <img src="../Images/Biography/College-SHS-Graduation-Pic.jpg" alt="My SHS Graduation Picture">
+                    <figcaption>BTS of My SHS Graduation Picture</figcaption>
+                </figure>
+            </a>
 
         </div>
         <h2>Family and Friends</h2>
         <div class="image-gallery">
-            <figure class="image-gallery-item">
-                <img target="Image Up Close" src="../Images/Biography/College-Freshmen-Friend-Group.jpeg" alt="My Friend Group during Freshmen Year">
-                <figcaption>My Friend Group back in Freshmen Year (Until Now)</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img target="Image Up Close" src="../Images/Biography/Childhood-Field-Trip-Arms-Out.jpeg" alt="Swimming Field Trip">
-                <figcaption>When we went swimming during a field trip</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img target="Image Up Close" src="../Images/Biography/Childhood-Nursery-Award.jpg" alt="Me at Nursery Receiving Awards">
-                <figcaption>Nursery Self receiving Awards</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img target="Image Up Close" src="../Images/Biography/Childhood-Kinder-Valedictorian.jpg" alt="Me at Kinder Valedictorian">
-                <figcaption>When I Became Valedictorian in Kindergarten</figcaption>
-            </figure>
-            <figure class="image-gallery-item">
-                <img target="Image Up Close" src="../Images/Biography/Childhood-Retreat-Candid-Pic.jpg" alt="At our Retreat">
-                <figcaption>Taken during our Grade 6 Retreat</figcaption>
-            </figure>
+            <a target="Image Up Close" href="../Images/Biography/College-Freshmen-Friend-Group.jpeg">
+                <figure class="image-gallery-item">
+                    <img src="../Images/Biography/College-Freshmen-Friend-Group.jpeg" alt="My Friend Group during Freshmen Year">
+                    <figcaption>My Friend Group back in Freshmen Year (Until Now)</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Biography/Childhood-Field-Trip-Arms-Out.jpeg">
+                <figure class="image-gallery-item">
+                    <img src="../Images/Biography/Childhood-Field-Trip-Arms-Out.jpeg" alt="Swimming Field Trip">
+                    <figcaption>When we went swimming during a field trip</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Biography/Childhood-Nursery-Award.jpg">
+                <figure class="image-gallery-item">
+                    <img src="../Images/Biography/Childhood-Nursery-Award.jpg" alt="Me at Nursery Receiving Awards">
+                    <figcaption>Nursery Self receiving Awards</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Biography/Childhood-Kinder-Valedictorian.jpg">
+                <figure class="image-gallery-item">
+                    <img src="../Images/Biography/Childhood-Kinder-Valedictorian.jpg" alt="Me at Kinder Valedictorian">
+                    <figcaption>When I Became Valedictorian in Kindergarten</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Biography/Childhood-Retreat-Candid-Pic.jpg">
+                <figure class="image-gallery-item">
+                    <img src="../Images/Biography/Childhood-Retreat-Candid-Pic.jpg" alt="At our Retreat">
+                    <figcaption>Taken during our Grade 6 Retreat</figcaption>
+                </figure>
+            </a>
         </div>
         <h2>Photography Dump</h2>
         <div class="image-gallery">
-            <figure class="image-gallery-item">
-                <img target="Image Up Close" src="../Images/Biography/College-My-UE-Snapshot-At-Night.jpg" alt="UE at Night">
-                <figcaption>UE at Night (taken by me)</figcaption>
-            </figure>
-            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Biography/Photo-Bacc-Mass.jpg" alt="Baccalaureate Mass">
-                <figcaption>Taken during my SHS Baccalaureate Mass</figcaption>
-            </figure>
-            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Biography/Photo-Yowell-Closeup.jpg" alt="Frozen Yogurt">
-                <figcaption>A Closeup of Froyo</figcaption>
-            </figure>
-            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Biography/Photo-Cityscape.jpg" alt="Cityscape Near UE">
-                <figcaption>Taken from UE LB Building</figcaption>
-            </figure>
-            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Biography/Photo-Senate.jpg" alt="At The Senate">
-                <figcaption>Back when we performed in the senate.</figcaption>
-            </figure>
-            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Biography/Photo-Taken-at-a-Rizal-Resort.jpg" alt="Resort in Rizal">
-                <figcaption>In a resort in Rizal</figcaption>
-            </figure>
-            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Biography/Photo-UE-cal.jpg" alt="UE Caloocan Campus">
-                <figcaption>At the UE Caloocan Campus</figcaption>
-            </figure>
+            <a target="Image Up Close" href="../Images/Biography/College-My-UE-Snapshot-At-Night.jpg">
+                <figure class="image-gallery-item">
+                    <img src="../Images/Biography/College-My-UE-Snapshot-At-Night.jpg" alt="UE at Night">
+                    <figcaption>UE at Night (taken by me)</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Biography/Photo-Bacc-Mass.jpg">
+                <figure class="image-gallery-item"><img src="../Images/Biography/Photo-Bacc-Mass.jpg" alt="Baccalaureate Mass">
+                    <figcaption>Taken during my SHS Baccalaureate Mass</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Biography/Photo-Yowell-Closeup.jpg">
+                <figure class="image-gallery-item"><img src="../Images/Biography/Photo-Yowell-Closeup.jpg" alt="Frozen Yogurt">
+                    <figcaption>A Closeup of Froyo</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Biography/Photo-Cityscape.jpg">
+                <figure class="image-gallery-item"><img src="../Images/Biography/Photo-Cityscape.jpg" alt="Cityscape Near UE">
+                    <figcaption>Taken from UE LB Building</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Biography/Photo-Senate.jpg">
+                <figure class="image-gallery-item"><img src="../Images/Biography/Photo-Senate.jpg" alt="At The Senate">
+                    <figcaption>Back when we performed in the senate.</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Biography/Photo-Taken-at-a-Rizal-Resort.jpg">
+                <figure class="image-gallery-item"><img src="../Images/Biography/Photo-Taken-at-a-Rizal-Resort.jpg" alt="Resort in Rizal">
+                    <figcaption>In a resort in Rizal</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Biography/Photo-UE-cal.jpg">
+                <figure class="image-gallery-item"><img src="../Images/Biography/Photo-UE-cal.jpg" alt="UE Caloocan Campus">
+                    <figcaption>At the UE Caloocan Campus</figcaption>
+                </figure>
+            </a>
         </div>
         <h2>Random</h2>
         <div class="image-gallery">
-            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Biography/Teenage-Back-Image.jpg" alt="Teenage back image">
-                <figcaption>Teenage back image</figcaption>
-            </figure>
-            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Biography/College-Singing-Contest-SInging.JPG" alt="College singing contest">
-                <figcaption>College singing contest</figcaption>
-            </figure>
-            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Personal-Blog/Personal-Menu-Screen-Old.png" alt="Old Minecraft Menu Screen">
-                <figcaption>Old Minecraft Menu Screen</figcaption>
-            </figure>
-            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Personal-Blog/Personal-Old-Nether-ss.png" alt="Old Nether Screenshot">
-                <figcaption>Back when the Nether looked like this</figcaption>
-            </figure>
-            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Personal-Blog/Personal-MON-Build-ss.png" alt="My name spelled with diamonds">
-                <figcaption>My name spelled with diamonds</figcaption>
-            </figure>
-            <figure class="image-gallery-item"><img target="Image Up Close" src="../Images/Homepage-Main-Image.png" alt="Homepage Main Image">
-                <figcaption>The page homepage</figcaption>
-            </figure>
+            <a target="Image Up Close" href="../Images/Biography/Teenage-Back-Image.jpg">
+                <figure class="image-gallery-item"><img src="../Images/Biography/Teenage-Back-Image.jpg" alt="Teenage back image">
+                    <figcaption>Teenage back image</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Biography/College-Singing-Contest-SInging.JPG">
+                <figure class="image-gallery-item"><img src="../Images/Biography/College-Singing-Contest-SInging.JPG" alt="College singing contest">
+                    <figcaption>College singing contest</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Personal-Blog/Personal-Menu-Screen-Old.png">
+                <figure class="image-gallery-item"><img src="../Images/Personal-Blog/Personal-Menu-Screen-Old.png" alt="Old Minecraft Menu Screen">
+                    <figcaption>Old Minecraft Menu Screen</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Personal-Blog/Personal-Old-Nether-ss.png">
+                <figure class="image-gallery-item"><img src="../Images/Personal-Blog/Personal-Old-Nether-ss.png" alt="Old Nether Screenshot">
+                    <figcaption>Back when the Nether looked like this</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Personal-Blog/Personal-MON-Build-ss.png">
+                <figure class="image-gallery-item"><img src="../Images/Personal-Blog/Personal-MON-Build-ss.png" alt="My name spelled with diamonds">
+                    <figcaption>My name spelled with diamonds</figcaption>
+                </figure>
+            </a>
+            <a target="Image Up Close" href="../Images/Homepage-Main-Image.png">
+                <figure class="image-gallery-item"><img src="../Images/Homepage-Main-Image.png" alt="Homepage Main Image">
+                    <figcaption>The page homepage</figcaption>
+                </figure>
+            </a>
         </div>
     </div>
     <a href="#" class="back-to-top" id="back-to-top">Back to Top &#8593;</a>
